Merge pull requests and update submodules